--- a/ecom-vue3/package.json
+++ b/ecom-vue3/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
+    "feather-icons": "^4.29.2",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.8",
-    "vue": "^3.5.13",
+    "vue": "^3.5.16",
+    "vue-feather": "^2.0.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
