--- a/ecom-vue3/package.json
+++ b/ecom-vue3/package.json
@@ -13,10 +13,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.1.1",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "feather-icons": "^4.29.2",
     "pinia": "^3.0.1",
+    "primevue": "^4.3.4",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.16",
     "vue-feather": "^2.0.0",
